Test/typing/should_fail/methods_abstract_body.java
package toto;

abstract class A {
    abstract int myMethod() {
        System.out.println("Coucou");
    }
}